# flocking

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
flocking/: CMakeLists.txt.bak  ducks.c
lib/: ducks.h  globals.h
